# coin-notifier

./: .gitignore  Cargo.toml  config.toml
docs/plan/: 00-overview.md  00-platform-redesign.md  01-scope.md  02-architecture.md  03-error-handling.md  04-config.md  05-data-model.md  06-exchange.md  07-storage.md  08-indicator.md  09-strategy.md  10-notifier.md  11-pipeline.md  12-risks-and-verification.md
migrations/: 001_initial.sql  002_backtest_results.sql
src/: backtest.rs  config.rs  error.rs  exchange.rs  indicator.rs  main.rs  model.rs  notifier.rs  signal_input.rs  signal_model.rs  storage.rs  strategy.rs
src/exchange/: binance.rs  upbit.rs
src/indicator/: bollinger.rs  ma.rs  macd.rs  rsi.rs  volume.rs
src/notifier/: terminal.rs
src/storage/: sqlite.rs
src/strategy/: condition.rs
