[package]
name = "coin-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "query"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "chrono",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
error-stack = "0.6"
derive_more = { version = "2", features = ["display", "error"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
governor = { version = "0.10", features = ["std"] }
nonzero_ext = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
